# example-otel-fastapi

./: LICENSE  pyproject.toml
app/: main.py
tests/: test_pytest_is_running.py
tests/features/: basic.feature
tests/features/steps/: steps.py
